--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to yourusername's homepage!
+descriptopn: Please let me know if you find anything interesting and keep up to date with us!
